@@ -1,5 +1,9 @@
 2003-10-01  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-command.h, cong-command.c
+
+	Added split3 modification
+	
 	* cong-node-modification-set-text.c
 
 	Implemented what had been a stub
